package me.yonghong.design.creational.factory;

/**
 * @author yonghongwang#163.com
 * @since 2021/8/5
 */
public interface Coin {

    String getDescription();

}
