package me.yonghong.patterns.structural.dynamicproxy;

/**
 * @author yonghongwang#163.com
 * @since 2021/8/9
 */
public class App {

    public static void main(String[] args) {

    }
}
